@startuml
title Request/Response Models

skinparam classAttributeIconSize 0

class ChatRequest {
    +thread_id: Optional[str]
    +user_prompt: str
    +conversation_flow: str
    +kb_top_k: Optional[int]
    +stream: bool
}

class ChatResponse {
    +thread_id: Optional[str]
    +message_id: Optional[str]
    +agent_response: str
    +token_count: int
    +sources: List[str]
}

class ChatResponseChunk {
    +thread_id: str
    +message_id: str
    +chunk: str
    +is_final: bool
}

class Message {
    +user_id: str
    +thread_id: str
    +message_id: str
    +role: str
    +content: str
    +content_filter_results: dict
    +created_at: datetime
}

class User {
    +user_id: str
    +identifier: str
    +created_at: datetime
}

class MessageFeedback {
    +message_id: str
    +feedback_type: str
    +feedback_text: Optional[str]
    +created_at: datetime
}

class KBSearchResult {
    +content: str
    +source: str
    +chunk_count: int
    +raw_results: List[Any]
    +is_empty: bool
}

ChatRequest --> ChatResponse : produces
ChatRequest --> ChatResponseChunk : streams
Message --> MessageFeedback : has
ChatResponse --> KBSearchResult : includes

@enduml
